--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  path_provider: ^2.1.1
+  pdf: ^3.10.4
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
