--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.1
   pdf: ^3.10.4
   open_file: ^3.3.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
